# rational

./: CMakeLists.txt
doc/: rational.md
example/: CMakeLists.txt  example.cpp
include/tcb/: rational.hpp
test/: CMakeLists.txt  test_rational.cpp
